# doom-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
core/: CMakeLists.txt
core/src/: Application.cpp  DebugOverlay.cpp  FrameBuffer.cpp  FreeLookCamera.cpp  Mesh.cpp  Model.cpp  Overlay.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp
core/src/Engine/: Application.h  Camera.h  DebugOverlay.h  Event.h  FreeLookCamera.h  IndexBuffer.h  Layer.h  Overlay.h  Renderer.h  Scene.h  Shader.h  Window.h  extern.h
core/src/include/: DebugOverlay.h  Engine.h  Event.h  extern.h  std_common.h
core/src/include/Rendering/: FrameBuffer.h  IndexBuffer.h  Renderer.h  Rendering_m.h  Shader.h  VertexArray.h  VertexBuffer.h
core/src/include/Scene/: Camera.h  FreeLookCamera.h  Light.h  Mesh.h  Model.h  Scene.h  Scene_m.h  Texture.h
core/src/include/Windowing/: Application.h  Layer.h  Overlay.h  Window.h  Windowing_m.h
demo/: CMakeLists.txt
demo/src/: DemoLayer.cpp  main.cpp
demo/src/include/: DemoLayer.h
editor/: CMakeLists.txt
editor/src/: EditorApplication.cpp  EditorOverlay.cpp  EditorViewport.cpp  LevelEditor.cpp  main.cpp
editor/src/include/: EditorApplication.h  EditorContext.h  EditorContexts.h  EditorEvents.h  EditorOverlay.h  EditorTools.h  EditorViewport.h  IEditorTool.h  LevelEditor.h  MapPrimitives.h
res/editor/shaders/: EditorPrimitives.frag  EditorPrimitives.vert
res/shaders/: frag.fs  vert.vs
src/: Shader.cpp  main.cpp  test.cpp  test.h
src/include/: Shader.h  VertexArray.h  VertexBuffer.h
